default/objects/Order_Item__c/fields/Beer__c.field-meta.xml
<CustomField>
    <fullName>Beer__c</fullName>
    <label>Beer</label>
    <referenceTo>Beer__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>