default/objects/Order_Item__c/fields/Beer_Order__c.field-meta.xml
<CustomField>
    <fullName>Beer_Order__c</fullName>
    <label>Beer Order</label>
    <referenceTo>Beer_Order__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>